<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/drawer_option_0" />

        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_books_24dp"
            android:title="@string/drawer_option_1" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_option_2" />
    </group>

    <item android:title="@string/drawer_feedback_title">

        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_feedback_suggestion"
                android:icon="@drawable/ic_comment_24dp"
                android:title="@string/drawer_feedback_0" />

            <item
                android:id="@+id/nav_feedback_bug"
                android:icon="@drawable/ic_bug_24dp"
                android:title="@string/drawer_feedback_1" />

            <item
                android:id="@+id/nav_feedback_rate"
                android:icon="@drawable/ic_star_24dp"
                android:title="@string/drawer_feedback_2" />
        </menu>

    </item>

</menu>