<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@android:color/holo_blue_dark"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_24dp"
        android:contentDescription="@string/drawer_header_image_description"
        />

    <TextView
        android:id="@+id/header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_name"
        android:textColor="@android:color/black"
        android:fontFamily="Roboto"
        />

    <TextView
        android:id="@+id/header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_email"
        android:textColor="@android:color/black"
        android:fontFamily="Roboto"
        />




</LinearLayout>